<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/miranha"
    tools:context=".menu">

    <TextView
        android:id="@+id/txtemenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="120dp"
        android:width="200dp"
        android:height="60dp"
        android:gravity="center"
        android:text="@string/txtemenu"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/imgsm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="10dp"
        android:width="200dp"
        android:height="65dp"
        android:backgroundTint="@color/white"
        android:text="@string/b1"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/material_emphasis_medium"
        app:layout_constraintBottom_toTopOf="@+id/btnb2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="20dp"
        android:width="200dp"
        android:height="65dp"
        android:backgroundTint="@color/white"
        android:text="@string/b2"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/material_emphasis_medium"
        app:layout_constraintBottom_toTopOf="@+id/btnb3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnb1" />

    <Button
        android:id="@+id/btnb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="20dp"
        android:width="200dp"
        android:height="65dp"
        android:backgroundTint="@color/white"
        android:text="@string/b3"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/material_emphasis_medium"
        app:layout_constraintBottom_toTopOf="@+id/btnb4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnb2" />

    <Button
        android:id="@+id/btnb4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="199dp"
        android:width="200dp"
        android:height="65dp"
        android:backgroundTint="@color/white"
        android:text="@string/b4"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/material_emphasis_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnb3" />

</androidx.constraintlayout.widget.ConstraintLayout>