<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/b2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/miranhafundo2"
    tools:context=".brinquedo2">

    <Button
        android:id="@+id/btnnext4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:width="125dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnnext"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/material_emphasis_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <ImageView
        android:id="@+id/imgsm2"
        android:layout_width="226dp"
        android:layout_height="300dp"
        android:layout_marginTop="320dp"
        android:contentDescription="@string/sm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvb"
        app:srcCompat="@drawable/miranha2" />

    <TextView
        android:id="@+id/txtvb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:width="200dp"
        android:height="60dp"
        android:gravity="center"
        android:text="@string/txtvb1"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtex2"
        android:layout_width="411dp"
        android:layout_height="195dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="316dp"
        android:text="@string/txtex2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txtex2" />

    <ImageView
        android:id="@+id/brinquedo2img"
        android:layout_width="254dp"
        android:layout_height="226dp"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="104dp"
        app:layout_constraintBottom_toTopOf="@+id/btnnext4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/brinquedo2img" />

    <ImageView
        android:id="@+id/fala2img"
        android:layout_width="240dp"
        android:layout_height="192dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toStartOf="@+id/brinquedo2img"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtex2"
        app:srcCompat="@drawable/fala2img" />

</androidx.constraintlayout.widget.ConstraintLayout>