<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fala1img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/miranhafundo2"
    tools:context=".brinquedo1">

    <ImageView
        android:id="@+id/imgsm"
        android:layout_width="226dp"
        android:layout_height="300dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/sm"
        app:layout_constraintEnd_toStartOf="@+id/btnnext"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvb"
        app:srcCompat="@drawable/miranha2" />

    <Button
        android:id="@+id/btnnext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:width="125dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnnext"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/material_emphasis_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <TextView
        android:id="@+id/txtvb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:width="200dp"
        android:height="60dp"
        android:gravity="center"
        android:text="@string/txtvb1"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtex2"
        android:layout_width="367dp"
        android:layout_height="212dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="316dp"
        android:text="@string/txtve"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvb"
        tools:text="@string/txtve" />

    <ImageView
        android:id="@+id/brinquedo1img"
        android:layout_width="330dp"
        android:layout_height="211dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toTopOf="@+id/btnnext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toEndOf="@+id/fala1img"
        app:srcCompat="@drawable/brinquedo1img" />

    <ImageView
        android:id="@+id/fala1img"
        android:layout_width="242dp"
        android:layout_height="190dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toStartOf="@+id/txtex2"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtex2"
        app:srcCompat="@drawable/fala1img" />

</androidx.constraintlayout.widget.ConstraintLayout>