<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/b3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/miranhafundo2"
    tools:context=".brinquedo2">

    <Button
        android:id="@+id/btnnext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:width="125dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnfim"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/material_emphasis_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <TextView
        android:id="@+id/txtvb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:width="200dp"
        android:height="60dp"
        android:gravity="center"
        android:text="@string/txtvb1"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtex2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="316dp"
        android:text="@string/txtex3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txtex3" />

    <ImageView
        android:id="@+id/brinquedo3img"
        android:layout_width="174dp"
        android:layout_height="167dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="357dp"
        app:layout_constraintBottom_toTopOf="@+id/btnnext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvb"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/brinquedo3img" />

</androidx.constraintlayout.widget.ConstraintLayout>